CocacolaProject/src/objects/Milestone1_Project__c.object
<CustomObject>
    <description>Force.com Labs - PM - A collaborative enterprise which has a planned goal. A project can have many milestones.</description>
    <fields>
        <fullName>BI_Cross_Func__c</fullName>
        <label>BI</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BI_Project_Type__c</fullName>
        <label>BI Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Synergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCPP_Status__c</fullName>
        <label>CCPP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Before DD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD1&amp;2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD2&amp;3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD3&amp;4 ①</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD3&amp;4 ②</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD3&amp;4 ③</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After DD4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Big_Title_NO__c</fullName>
        <label>Category / BIG Title NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Big_Title__c</fullName>
        <label>Category / BIG Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Cross_Func__c</fullName>
        <label>Commercial</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conductor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conductor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conductor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>プロジェクトの完了期限</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>このプロジェクトの概要</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>開始日と期限日の間の日数</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FInance_Cross_Func__c</fullName>
        <label>Finance</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GoogleGanntUrl__c</fullName>
        <inlineHelpText>算出</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Cross_Func__c</fullName>
        <label>HR</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Cross_Func__c</fullName>
        <label>IT</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_or_with_ATK__c</fullName>
        <label>Individual or with ATK</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATK（Phase 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATK（Phase 2)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_event__c</fullName>
        <description>record type ：BI only</description>
        <label>Key event</label>
        <picklist>
            <picklistValues>
                <fullName>from this week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>for next week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>プロジェクトの開始日</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Cross_Func__c</fullName>
        <label>Legal</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missed_Deadline_explanation__c</fullName>
        <label>Missed Deadline explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>このプロジェクトのマイルストーンの次の期限日。サブマイルストーンを含む。</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>次の未完了マイルストーンの期限日。子マイルストーンは含まない。</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>このプロジェクトの未完了マイルストーン数。子マイルストーンを含む。</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>このプロジェクトの総未完了マイルストーン。子マイルストーンはカウントしない。</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opex_or_CAPEX__c</fullName>
        <label>Opex or CAPEX</label>
        <picklist>
            <picklistValues>
                <fullName>Opex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex (CCBSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPEX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAC_Cross_Func__c</fullName>
        <label>PAC</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_to_address_delays__c</fullName>
        <label>Plan to address delays</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procurement_Cross_Func__c</fullName>
        <label>Procurement</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Classification__c</fullName>
        <label>Project Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_No__c</fullName>
        <label>Project No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectSponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status_View__c</fullName>
        <formula>IMAGE( 
CASE(Project_Status__c, 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), &quot;status color&quot; 
)</formula>
        <label>Project Status*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reduction_or_Avoidance__c</fullName>
        <label>Reduction or Avoidance</label>
        <picklist>
            <picklistValues>
                <fullName>Reduction （ABP In)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction (No plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoidance （ABP In)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoidance (No plan)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SCM_Cross_Func__c</fullName>
        <label>SCM</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( Total_Expense_Budget__c &gt; 0,
IMAGE(
&quot;http://chart.apis.google.com/chart?chtt=Task+Expense+Budget+Analysis&amp;&quot; &amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Expense_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Expense_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Expense_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Expense_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Expense_Budget__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Expense_Budget_from_Milestones__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Expense_Estimate__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Expense_Incurred__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100) 
, &quot;Project Expense - Budget, Planned, Estimated, Incurred&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BudgetMiletoneEstimate__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?chtt=Task+Time+Budget+Analysis&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Hours_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Hours_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Hours_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Hours_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Hours_Budget__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Hours_Budget_from_Milestones__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Hours_Estimate__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Hours_Incurred__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_HoursSummary__c</fullName>
        <formula>IF( Total_Hours_Budget__c &gt; 0, 
IMAGE(Status_BudgetMiletoneEstimate__c, &quot;Hours Summary: Budgeted, Planned, Estimated and Incurred.&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary (chart) - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_OpenVComplete__c</fullName>
        <formula>IF( Status_TasksOpenComplete__c != &apos;&apos;,
IMAGE( Status_TasksOpenComplete__c , &quot;Open vs. Complete Tasks&quot;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks (chart) - Deprec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Img_OpenLateBlocked__c</fullName>
        <formula>IMAGE( Status_TasksOpenBlockedLate__c , &quot;Open, Late &amp; Blocked Tasks.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks (chart) - Dep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenBlockedLate__c</fullName>
        <formula>IF(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) &gt; 0 , 
&quot;http://chart.apis.google.com/chart?chtt=Open+Task+Analysis&amp;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ))&amp;&quot;&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(Total_Late_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(Total_Blocked_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(Total_Open_Task_Count__c / max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100)&amp;&quot;|&quot;&amp; TEXT(Total_Late_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100) &amp;&quot;|&quot; &amp; TEXT(Total_Blocked_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100), &apos;/s.gif&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenComplete__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>プロジェクトの状態</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub Function</label>
        <picklist>
            <controllingField>Function__c</controllingField>
            <picklistValues>
                <fullName>Controller&apos;s Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(VM) Vending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Commercial Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Excellence &amp; Package Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Strategy, Shared Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(EOSH)Environmentand Occupational Safetyand Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning &amp; SC Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Drink Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics_Pr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-corporate Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactuaring (BSC)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Blocked_Task_Count__c</fullName>
        <inlineHelpText>ブロックされているこのプロジェクトのタスク数</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Task_Count__c</fullName>
        <inlineHelpText>このプロジェクトの完了済みタスク数</inlineHelpText>
        <label>Total Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <inlineHelpText>このプロジェクトの総予算</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget_from_Milestones__c</fullName>
        <inlineHelpText>このプロジェクトのマイルストーンの総予算</inlineHelpText>
        <label>Total Expense Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Estimate__c</fullName>
        <inlineHelpText>全ての子マイルストーンから算出した推定費用</inlineHelpText>
        <label>Total Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Incurred__c</fullName>
        <inlineHelpText>全ての子マイルストーンから算出した推定費用</inlineHelpText>
        <label>Total Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <inlineHelpText>このプロジェクトの総予定時間</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget_from_Milestones__c</fullName>
        <inlineHelpText>このプロジェクトのマイルストーンから算出した推定時間</inlineHelpText>
        <label>Total Hours Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Estimate__c</fullName>
        <inlineHelpText>全ての子マイルストーンから算出した推定時間</inlineHelpText>
        <label>Total Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Incurred__c</fullName>
        <inlineHelpText>全ての子マイルストーンのタスクから算出した総時間</inlineHelpText>
        <label>Total Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Task_Count__c</fullName>
        <inlineHelpText>遅延しているこのプロジェクトのタスク数</inlineHelpText>
        <label>Total Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Task_Count__c</fullName>
        <inlineHelpText>このプロジェクトの進行中タスク数（遅延とブロックを含む）</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>CokeOne_Project</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Deadline__c</columns>
        <columns>Kickoff__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>CokeOne</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Coke One</value>
        </filters>
        <label>CokeOne Project</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Deadline__c</columns>
        <columns>Total_Blocked_Task_Count__c</columns>
        <columns>Total_Late_Task_Count__c</columns>
        <columns>Total_Open_Task_Count__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>BusinessIntegration</fullName>
        <active>true</active>
        <description>BI専用</description>
        <label>Business Integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>CokeOne</fullName>
        <active>true</active>
        <description>CokeOne専用</description>
        <label>CokeOne</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finance</fullName>
        <active>true</active>
        <description>Finance専用</description>
        <label>Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>General　User</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Development</fullName>
        <active>true</active>
        <description>Salesforce Dev Team</description>
        <label>Salesforce</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Can_not_change_the_Owner</fullName>
        <active>false</active>
        <description>所有者は変更できません。</description>
        <errorConditionFormula>ISCHANGED( OwnerId )</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>所有者は変更できません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Kickoff_before_deadline</fullName>
        <active>true</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(Kickoff__c)) &amp;&amp; NOT(ISNULL(Deadline__c)) &amp;&amp; Deadline__c &lt; Kickoff__c</errorConditionFormula>
        <errorDisplayField>Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Expense_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Expense_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Expense_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Hours_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Hours_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Hours_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
</CustomObject>